# wallpaper

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  PKGBUILD  README.md  deny.toml
.github/workflows/: rust.yml
src/: cli.rs  history.rs  main.rs  programs.rs  utils.rs
src/wallpaper-main/src/: main.rs
src/wallpaper-main/src/wallpaper-main/: README.md
