[package]
name = "wallpaper"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
humantime = "2.1"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "2.1"

[dev-dependencies]
tempfile = "3.0"
